Enforce single config entry and use stable identifier fallback
- Add single_config_entry to manifest (only one UDP port available)
- Use entry.entry_id as identifier fallback instead of host IP
- Replace duplicate-serial tests with single_config_entry test

--- a/custom_components/earn_e_p1/translations/nl.json
+++ b/custom_components/earn_e_p1/translations/nl.json
@@ -32,6 +32,7 @@
     },
     "abort": {
       "already_configured": "Deze EARN-E P1 Meter is al geconfigureerd.",
+      "single_instance_allowed": "Al geconfigureerd. Er is slechts één configuratie mogelijk.",
       "reconfigure_successful": "Herconfiguratie geslaagd."
     }
   },
